examples/type_system/failing/131_call_arg_span_precision.flx
fn pair(a: Int, b: Int) -> Int { a + b }

fn main() -> Unit {
    let _x = pair(1, "oops")
}
